# libmolgrid

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Gemfile  _config.yml  about.md  docs.md  index.md  jekyll_header.html  tutorials.md
docs/_docs/: annotated.html  annotated_dup.js  atom__typer_8cpp.html  atom__typer_8cpp.js  atom__typer_8h.html  atom__typer_8h.js  atom__typer_8h__dep__incl.map  atom__typer_8h__dep__incl.md5  atom__typer_8h_source.html  cartesian__grid_8cpp.html  cartesian__grid_8h.html  cartesian__grid_8h.js  cartesian__grid_8h__dep__incl.map  cartesian__grid_8h__dep__incl.md5  cartesian__grid_8h_source.html  classes.html  classlibmolgrid_1_1AtomIndexTypeMapper-members.html  classlibmolgrid_1_1AtomIndexTypeMapper.html  classlibmolgrid_1_1AtomIndexTypeMapper.js  classlibmolgrid_1_1AtomIndexTypeMapper__inherit__graph.map  classlibmolgrid_1_1AtomIndexTypeMapper__inherit__graph.md5  classlibmolgrid_1_1AtomIndexTyper-members.html  classlibmolgrid_1_1AtomIndexTyper.html  classlibmolgrid_1_1AtomIndexTyper.js  classlibmolgrid_1_1AtomIndexTyper__inherit__graph.map  classlibmolgrid_1_1AtomIndexTyper__inherit__graph.md5  classlibmolgrid_1_1AtomTyper-members.html  classlibmolgrid_1_1AtomTyper.html  classlibmolgrid_1_1AtomTyper.js  classlibmolgrid_1_1AtomTyper__inherit__graph.map  classlibmolgrid_1_1AtomTyper__inherit__graph.md5  classlibmolgrid_1_1AtomVectorTyper-members.html  classlibmolgrid_1_1AtomVectorTyper.html  classlibmolgrid_1_1AtomVectorTyper.js  classlibmolgrid_1_1AtomVectorTyper__inherit__graph.map  classlibmolgrid_1_1AtomVectorTyper__inherit__graph.md5  classlibmolgrid_1_1BalancedExampleRefProvider-members.html  classlibmolgrid_1_1BalancedExampleRefProvider.html  classlibmolgrid_1_1BalancedExampleRefProvider.js  classlibmolgrid_1_1BalancedExampleRefProvider__inherit__graph.map  (+317 more)
docs/_includes/: .jumbotron.html.swp  doc_sidebar.html  footer.html  head.html  jumbotron.html  navigation.html  search-lunr.html  tutorial_sidebar.html
docs/_layouts/: docs.html  tutorials.html
docs/_python/: .gdb_history  conf.py  genindex.html  index.html  molgrid.rst  py-modindex.html  search.html
docs/_tutorials/: custom_atom_typer_example.html  custom_atom_typer_example.ipynb  grid_single_molecule.html  grid_single_molecule.ipynb  train_basic_CNN_with_PyTorch.html  train_basic_CNN_with_PyTorch.ipynb  train_basic_CNN_with_Tensorflow.html  train_basic_CNN_with_Tensorflow.ipynb  train_simple_cartesian_reduction.html  train_simple_cartesian_reduction.ipynb
docs/assets/css/: docs.css  styles.scss
docs/cpp/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/cpp/.doctrees/: environment.pickle  index.doctree
docs/cpp/_sources/: index.rst.txt
docs/cpp/xml/: atom__typer_8cpp.xml  atom__typer_8h.xml  cartesian__grid_8cpp.xml  cartesian__grid_8h.xml  classlibmolgrid_1_1AtomIndexTypeMapper.xml  classlibmolgrid_1_1AtomIndexTyper.xml  classlibmolgrid_1_1AtomTyper.xml  classlibmolgrid_1_1AtomVectorTyper.xml  classlibmolgrid_1_1BalancedExampleRefProvider.xml  classlibmolgrid_1_1CallbackIndexTyper.xml  (+81 more)
docs/docs/: all_0.js  all_13.js  all_17.js  all_2.js  all_5.js  all_a.js  all_c.js  annotated.html  atom__typer_8cpp.html  atom__typer_8h.html  atom__typer_8h__dep__incl.map  atom__typer_8h_source.html  cartesian__grid_8cpp.html  cartesian__grid_8h.html  cartesian__grid_8h__dep__incl.map  cartesian__grid_8h__dep__incl.md5  cartesian__grid_8h_source.html  classes.html  classes_1.js  classes_2.js  classes_4.js  classes_b.js  classes_e.js  classlibmolgrid_1_1AtomIndexTypeMapper-members.html  classlibmolgrid_1_1AtomIndexTypeMapper.html  classlibmolgrid_1_1AtomIndexTypeMapper__inherit__graph.md5  classlibmolgrid_1_1AtomIndexTyper-members.html  classlibmolgrid_1_1AtomIndexTyper.html  classlibmolgrid_1_1AtomIndexTyper__inherit__graph.md5  classlibmolgrid_1_1AtomTyper-members.html  classlibmolgrid_1_1AtomTyper.html  classlibmolgrid_1_1AtomTyper__inherit__graph.md5  classlibmolgrid_1_1AtomVectorTyper-members.html  classlibmolgrid_1_1AtomVectorTyper.html  classlibmolgrid_1_1AtomVectorTyper__inherit__graph.md5  classlibmolgrid_1_1BalancedExampleRefProvider-members.html  classlibmolgrid_1_1BalancedExampleRefProvider.html  classlibmolgrid_1_1BalancedExampleRefProvider__inherit__graph.md5  classlibmolgrid_1_1CallbackIndexTyper-members.html  classlibmolgrid_1_1CallbackIndexTyper.html  (+244 more)
docs/python/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
python/: .gitignore  CMakeLists.txt  __init__.py  bindings.cpp  bindings.cpp.in  bindings.h  bindings.in.cpp  bindings_grids.cpp  set_docstrings.cmake  setup.py  torch.py  torch_bindings.py
src/: CMakeLists.txt  LICENSE  atom_typer.cpp  atom_typer.h  cartesian.h  cartesian_grid.cpp  common.h  coord_cache.cpp  coord_cache.h  coordinateset.cpp  coordinateset.cu  coordinateset.h  example.cpp  example.h  example_dataset.cpp  example_extractor.cpp  example_extractor.h  example_provider.cpp  example_provider.h  exampleref_providers.cpp  exampleref_providers.h  grid.h  grid_interpolater.cpp  grid_interpolater.cu  grid_io.cpp  grid_maker.cpp  grid_maker.cu  grid_maker.h  libmolgrid.cpp  libmolgrid.h  managed_grid.h  quaternion.h  string_cache.cpp  transform.cpp  transform.cu  transform.h
test/: CMakeLists.txt  bench_gridinterp.cpp  conftest.py  test_coordcache.py  test_coordinateset.cpp  test_coordinateset.py  test_example.py  test_example_dataset.py  test_example_provider.py  test_grid.cpp  test_grid.cu  test_grid.py  test_gridinterp.cpp  test_gridinterp.py  test_gridio.py  test_gridmaker.cpp  test_gridmaker.cu  test_gridmaker.py  test_mgrid.cpp  test_mgrid.cu  test_numpy.py  test_quaternion.cpp  test_runner.cpp  test_torch.py  test_torch_cnn.py  test_transform.cpp  test_transform.cu  test_transform.h  test_transform.py  test_typing.py  test_util.h
test/data/: LIG.mol  emap  grouped.types  lig.molcache2  ligonly.types  methyl.sdf  multilig.types  recmap  single.types  small.types  smalldup.types  smallmol.types
(+1207 files in other folders)
